<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">求学宝</string>

    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="title_forget_pwd">忘记密码</string>
    <string name="title_com_question">常见问题</string>
    <string name="title_mbti">您的测评结果</string>
    <string name="title_hollander">霍兰德职业兴趣测评结果</string>
    <string name="title_school_library">院校库</string>

    <string name="main_home">首页</string>
    <string name="main_chat">消息</string>
    <string name="main_info">伴考</string>
    <string name="main_mine">我的</string>
    <string name="school_major">录取</string>
    <string name="school_intro">简介</string>
    <string name="school_conduct">招生简章</string>
    <string name="school_summary">学校简介</string>
    <string name="school_fee_scholarship">学费与奖金</string>
    <string name="school_life">校园生活</string>
    <string name="school_line_year">年份</string>
    <string name="school_line_avg">平均分</string>
    <string name="school_line_top">最高分</string>
    <string name="school_line_min">最低分</string>
    <string name="school_line_control">控制线</string>
    <string name="hint_school_bat">点击切换招生批次</string>
    <string name="hint_school_recruit">招生计划</string>
    <string name="hint_school_baoming">报名后老师会主动与你联系,提供细心、周到的服务与指导</string>
    <string name="hint_no_thanks">不，谢谢</string>
    <string name="hint_want_baoming">我要报名</string>
    <string name="hint_repeat_baoming">不能重复报名</string>
    <string name="hint_baoming_success">预报名成功</string>
    <string name="hint_concern_success">关注成功</string>
    <string name="hint_consult">点击头像咨询大学老师</string>
    <string name="hint_consult_no_teacher">该学校暂时还没有老师入驻</string>
    <string name="hint_consult_school_question">本校常见问题</string>
    <string name="hint_consult_all_question">考生关心的问题都在这里</string>
    <string name="hint_sign_up">预报名</string>
    <string name="hint_sign_on">已报名</string>
    <string name="hint_concern">关注</string>
    <string name="hint_look_more">查看更多</string>
    <string name="hint_school_major_info">基本信息</string>
    <string name="hint_school_major_score">专业录取分数线</string>
    <string name="hint_school_major_desc">专业介绍</string>
    <string name="hint_school_major_similar">相似专业</string>


    <string name="com_add">添加</string>
    <string name="hint_exit">再返回一次退出程序</string>
    <string name="failed_to_init_chat">初始化聊天失败</string>
    <string name="hint_login_phone">请输入手机号码</string>
    <string name="hint_login_pwd">请输入密码</string>
    <string name="hint_login_verify">请输入验证码</string>
    <string name="hint_login_submit">登录</string>

    <string name="hint_login_look">先看看</string>
    <string name="login_ordinance"><Data><![CDATA[<font color="#EEEEEE"><b>登录或注册表示同意</b></font><font color="#f9ae38"><b>《求学宝用户协议》</b></font>]]></Data></string>
    <string name="hint_login_third">第三方登录</string>
    <string name="hint_tag_recommended_colleges">推荐院校</string>
    <string name="hint_sys_msg">系统通知</string>
    <string name="hint_push_msg">推送通知</string>
    <string name="hint_no_msg">暂无消息</string>
    <string name="hint_consultation">咨询</string>

    <string name="mine">我的</string>
    <string name="immediately_login">立即登录</string>
    <string name="select_college">请选择高中</string>
    <string name="msg_tip">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="prompt">提示</string>
    <string name="zhuce_judge">请填写真实信息，填写后不可修改</string>

    <string name="tv_ljwssjf">立即完善得积分</string>
    <string name="tv_wdqxda">我的求学档案</string>
    <string name="tv_wtx">未填写</string>
    <string name="tv_wdcj">我的成绩</string>
    <string name="qkankan">去看看</string>
    <string name="yhmbnwk">用户名不能为空！</string>
    <string name="sjhmbnwk">手机不能为空！</string>

    <string name="mmgsbzq">密码格式不正确！</string>
    <string name="qsrzqdyhm">请输入正确的用户名!</string>
    <string name="qsrzqdsjhm">请输入正确的手机号码!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hfnyfz">接下来可能会花费您1分钟时间，我们\n需要了解一下您的基本情况。</string>
    <string name="djtxxm">点击填写姓名</string>
    <string name="nxzzngzxjdl">您现在哪个高中就读呢？</string>
    <string name="ndzsxm">您的真实姓名？</string>
    <string name="next">Next</string>
    <string name="ndgdcj">您大概的成绩？</string>
    <string name="djtxzhouycdcj">点击填写最近一次考试的分数</string>
    <string name="nbkdkms">您的报考科目是？</string>
    <string name="wenke">文科</string>
    <string name="like">理科</string>
    <string name="yswk">艺术文科</string>
    <string name="yslk">艺术理科</string>
    <string name="code_send_success">验证码已成功发送</string>
    <string name="hint_not_describe">暂无描述</string>
    <string name="hint_not_data">暂无数据</string>
    <string name="hint_not_comment">暂无评论</string>

    <string name="yqm">邀请码</string>
    <string name="yhm">优惠码</string>
    <string name="wdsc">我的收藏</string>
    <string name="bmddx">报名的大学</string>
    <string name="wddd">我的订单</string>
    <string name="wdzyb">我的志愿表</string>
    <string name="ywtzkf">有问题找客服</string>
    <string name="sybz">使用帮助</string>
    <string name="bzyfk">帮助与反馈</string>
    <string name="gywm">关于我们</string>
    <string name="yqhylkmd">邀请好友，立刻免单</string>


    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="user_register">新用户注册</string>
    <string name="user_password">找回密码</string>
    <string name="code_send_down">%1$s秒后重新发送</string>

    <string name="phone_must_not_be_empty">手机号码不能为空</string>
    <string name="phone_must_be_right">请输入正确的手机号码</string>
    <string name="code_must_be_right">请输入正确的验证码</string>
    <string name="pwd_must_be_length5">密码长度不少于5位</string>
    <string name="pwd_confirm_must_be_same">两次输入密码必须一致</string>
    <string name="save_password_success">密码已成功修改</string>
    <string name="reg_success">恭喜您已注册成功</string>
    <string name="please_pick_area">您还没有选择地区</string>


    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_card_number">请输入序列号</string>

    <string name="please_input_pwd_confirm">请确认密码</string>

    <string name="hint_bankao_zixun">资讯</string>
    <string name="hint_bankao_beikao">备考</string>
    <string name="hint_bankao_baokao">报考</string>
    <string name="hint_bankao_daxue">大学</string>
    <string name="hint_bankao_zhuanye">专业</string>
    <string name="hint_bankao_edit">我要评论(不得超过200字)</string>

    <string name="hint_send">发送</string>

    <string name="hint_more">点击查看更多</string>
    <string name="hint_no_more">没有更多评论了</string>
    <string name="hint_add_collection">收藏成功</string>
    <string name="hint_add_good">点赞成功</string>
    <string name="hint_cancel">取消成功</string>
    <string name="hint_comment_success">评论成功</string>


    <string name="bankao_comment_count">最新评论(共%1$d条评论)</string>
    <string name="combine_plan">%1$d年招生计划%2$s人</string>
    <string name="zhuajiajntzy">专家教你填志愿</string>
    <string name="counsel_me">咨询我</string>
    <string name="lecture_num_summary">共%1$s课 | %2$s次播放</string>
    <string name="specialist_summary">专家介绍</string>
    <string name="hint_no_network">请联网后再操作</string>

    <string name="school_major_no_recruit">有招生，具体人数考试院未公布</string>
    <string name="school_major_recruit_num">%1$d人</string>
    <string name="school_major_name">专业名称：%1$s</string>
    <string name="school_major_grade">所属层次：%1$s</string>
    <string name="school_major_parent">专业大类：%1$s</string>
    <string name="school_major_recruit">招生计划：%1$s</string>
    <string name="school_major_evaluation">职业性格匹配：</string>

    <string name="ben_ke">本科</string>
    <string name="zhuan_ke">专科</string>

    <string name="previous_problem">上一题</string>
    <string name="answer_a">A:%1$s</string>
    <string name="answer_b">B:%1$s</string>
    <string name="previous_problem_nav">%1$d/%2$d</string>

    <string name="hint_room_failed">连接聊天系统失败，请退出登录重试</string>
    <string name="hint_me_evaluation">已对本次服务做出了评价</string>
    <string name="hint_other_evaluation">学生已对本次服务做出了评价</string>
    <string name="hint_evaluation_push">学生%1$s：已对本次服务做出了评价，点击查看详情</string>
    <string name="hint_evaluation">对本次服务感觉如何？满意的话麻烦给个好评哦！</string>
    <string name="hint_evaluation_good">给个好评</string>
    <string name="hint_evaluation_com">一般般</string>
    <string name="hint_evaluation_ago">您已评价</string>
    <string name="hint_phone_success">已将您的联系方式发送给老师</string>
    <string name="hint_phone_invite">我想要查看您的联系方式，您是否同意？</string>
    <string name="hint_phone_invite_agree">同意</string>
    <string name="hint_phone_invite_reject">拒绝</string>
    <string name="hint_me_phone_reject">已拒绝与老师交换联系方式</string>
    <string name="hint_other_phone_reject">学生拒绝与您交换联系方式</string>
    <string name="hint_phone_exchange_push_failed">学生%1$s：拒绝与您交换联系方式，点击查看详情</string>
    <string name="hint_phone_exchange_push_success">学生%1$s：拒绝与您交换联系方式，点击查看详情</string>
    <string name="hint_chat_hello">你好！有什么可以帮助你的吗？</string>

    <string name="hint_frequent_operation">请谨慎操作，点击频率不能太快</string>
    <string name="hint_loading">数据加载中…</string>

    <string name="hint_character_assess">职业性格测评</string>
    <string name="hint_character_assess_desc">职业规划前通常专家都建议进行包括职业性格、职业兴趣、潜能、天赋等测试，通过这些测试，每个人都能通过自己的职业测评结果来了解适合自己的职业规划方向\n\n想知道自己的优势和潜在弱点是什么吗？\n现在就开始来测试吧！</string>
    <string name="hint_hollaender_assess">霍兰德\n职业兴趣测评</string>
    <string name="hint_mbti_top">帮你认识自己 科学选择专业</string>
    <string name="hint_mbti_desc">MBTI职业性格测试依据心理类型理论,通过测试结果可以推荐对口的专业给你</string>
    <string name="hint_mbti_bottom">该测试共计93道题目,预计将花费您18分钟。</string>
    <string name="hint_mbti_start">开始测试</string>
    <string name="hint_hollaender_bottom">该测试共计60道题目,预计将花费您12分钟。</string>
    <string name="hint_hollaender_center">兴趣是最好的老师，能把兴趣作为自己的工作，一定是件幸福的事情，挖掘自己的兴趣点所在，让你即将就读的专业和未来从事的职业，都能插上兴趣的翅膀。马上开始测试，获得专属于你的潜在职业兴趣报告！</string>
    <string name="hint_assess_theme">您属于%1$s型的人</string>
    <string name="hint_mbti_right_title">重新测试</string>
    <string name="hint_assess_again">重新测试,将会清空现有的测试结果</string>
    <string name="hint_hollander_top">霍兰德兴趣测评结果分析</string>
    <string name="hint_hollander_bottom">霍兰德兴趣测评详解</string>
    <string name="menu_default">默认</string>
    <string name="hint_hollander_r">具有顺从、坦率、谦虚、自然、坚毅、实际、有礼、害羞、稳健、节俭的特征，表现为:\n 1、喜爱实用性的职业或情境，以从事所喜好的活动，避免社会性的职业或情境。\n 2、用具体实际的能力解决工作及其他方面的问题，较缺乏人际关系方面的能力。\n 3、重视具体的事物，如金钱，权力、地位等。</string>
    <string name="hint_hollander_i">具有分析、谨慎、批评、好奇、独立、聪明、内向、条理、谦逊、精确、理发、保守的特征，表现为:\n 1、喜爱研究性的职业或情境，避免企业性的职业或情境。\n 2、用研究的能力解决工作及其他方面的问题，即自觉、好学、自信，重视科学，但缺乏领导方面的才能。</string>
    <string name="hint_hollander_a">具有复杂、想象、冲动、独立、直觉、无秩序、情绪化、理想化、不顺从、有创意、富有表情、不重实际的特征，表现为:\n 1、喜爱艺术性的职业或情境，避免传统性的职业或情境。\n 2、富有表达能力和直觉、独立、具创意、不顺从（包括表演、写作、语言），并重视审美的领域。</string>
    <string name="hint_hollander_s">具有合作、友善、慷慨、助人、仁慈、负责、圆滑、善社交、善解人意、说服他人、理想主义等特征，表现为:\n 1、喜爱社会型的职业或情境，避免实用性的职业或情境，并以社交方面的能力解决工作及其他方面的问题，但缺乏机械能力与科学能力。\n 2、喜欢帮助别人、了解别人，有教导别人的能力，且重视社会与伦理的活动与问题。</string>
    <string name="hint_hollander_e">具有冒险、野心、独断、冲动、乐观、自信、追求享受、精力充沛、善于社交、获取注意、知名度等特征，表现为:\n 1、喜欢企业性质的的职业或环境，避免研究性质的职业或情境，会以企业方面的能力解决工作或其他方面的问题能力。\n 2、有冲动、自信、善社交、知名度高、有领导与语言能力，缺乏科学能力，但重视政治与经济上的成就。</string>
    <string name="hint_hollander_c">具有顺从、谨慎、保守、自控、服从、规律、坚毅、实际稳重、有效率、但缺乏想象力等特征，表现为:\n 1、喜欢传统性质的的职业或环境，避免艺术性质的职业或情境，会以传统的能力解决工作或其他方面的问题。\n 2、喜欢顺从、规律、有文书与数字能力，并重视商业与经济上的成就。</string>
    <string name="hint_hollander_type_r">现实型（R）</string>
    <string name="hint_hollander_type_i">研究型（I）</string>
    <string name="hint_hollander_type_a">艺术型（A）</string>
    <string name="hint_hollander_type_s">社会型（S）</string>
    <string name="hint_hollander_type_e">企业型（E）</string>
    <string name="hint_hollander_type_c">常规型（C）</string>
    <string name="hint_hollander_integral">霍兰德测试完成！您已获得%1$d积分</string>

    <string name="hint_dialog_integral">(10积分=1元)</string>

    <string name="hint_school_library_tag1">在招批次</string>
    <string name="hint_school_library_tag2">所在地</string>
</resources>