<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/view_module_tag" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorDivider"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/px_15"
        android:paddingEnd="@dimen/px_40"
        android:paddingStart="@dimen/px_40"
        android:paddingTop="@dimen/px_15">

        <TextView
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/school_line_year"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/school_line_avg"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/school_line_top"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/text4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/school_line_min"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <include layout="@layout/view_list" />

    <include layout="@layout/empty_school" />

</LinearLayout>