<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/hld_22x"
        android:orientation="vertical">


        <ImageView
            android:layout_width="@dimen/px_400"
            android:layout_height="@dimen/px_400"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/px_50"
            android:layout_marginTop="@dimen/px_150"
            android:contentDescription="@string/hint_not_describe"
            android:src="@mipmap/hld3x" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50.0dip"
            android:layout_marginRight="50.0dip"
            android:lineSpacingExtra="3.0dip"
            android:text="@string/hint_hollaender_center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px_45" />

        <Button
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/px_40"
            android:layout_marginLeft="@dimen/px_200"
            android:layout_marginRight="@dimen/px_200"
            android:layout_marginTop="@dimen/px_70"
            android:background="@color/orange"
            android:gravity="center"
            android:text="@string/hint_mbti_start"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px_50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/px_30"
            android:text="@string/hint_hollaender_bottom"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px_45" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>