<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_20"
        android:background="@color/colorDivider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="@dimen/px_50"

        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/px_45"
            android:text="@string/zhuajiajntzy"/>
        <TextView
            android:id="@+id/tv_num"
            android:layout_below="@+id/tv1"
            android:layout_marginTop="@dimen/px_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/px_35"
            android:textColor="@color/black"
            android:text="@string/lecture_num_summary"
            />

<TextView
    android:id="@+id/go_counsel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentEnd="true"
    android:layout_centerVertical="true"
    android:textSize="@dimen/px_50"
    android:textColor="@color/orange"
    android:text="@string/counsel_me"
    android:background="@drawable/lecture_header_view_btnbg"/>
    </RelativeLayout>

</LinearLayout>
