<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/px_500"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_white_radius_30"
    android:orientation="vertical"
    android:padding="@dimen/px_30">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="@dimen/px_8"
        android:text="@string/hint_phone_invite"
        android:textColor="@android:color/black"
        android:textSize="@dimen/px_40" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_30"
        android:orientation="horizontal">

        <TextView
            android:id="@id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/px_15"
            android:layout_weight="1"
            android:background="@drawable/shape_yellow"
            android:gravity="center"
            android:paddingBottom="@dimen/px_10"
            android:paddingTop="@dimen/px_10"
            android:text="@string/hint_phone_invite_agree"
            android:textColor="@android:color/black"
            android:textSize="@dimen/px_35" />

        <TextView
            android:id="@id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/px_15"
            android:layout_weight="1"
            android:background="@drawable/shape_gray"
            android:gravity="center"
            android:paddingBottom="@dimen/px_10"
            android:paddingTop="@dimen/px_10"
            android:text="@string/hint_phone_invite_reject"
            android:textColor="@android:color/black"
            android:textSize="@dimen/px_35" />
    </LinearLayout>

</LinearLayout>